manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
  labels:
    name: n8n
